--- a/Pages/Features/Projeto/AnaliseProjeto.razor
+++ b/Pages/Features/Projeto/AnaliseProjeto.razor
@@ -27,7 +27,7 @@
             </div>
             <div class="col-md-6 offset-md-3" style="margin-top:25px;">
                 <label for="text" style="text-align:center">Análise realizada</label>
-                <InputText @bind-Value="@project.Name" class="form-control" id="exampleTextarea" rows="5" placeholder="Escreva o que acha sobre o Projeto!"></InputTextArea>
+                <InputText @bind-Value="@project.Name" class="form-control" id="exampleTextarea" rows="5" placeholder="Escreva o que acha sobre o Projeto!"/>
             </div>
             <br>
             <div class="form-group">
