--- a/Pages/Features/Projeto/CadastroProjeto.razor
+++ b/Pages/Features/Projeto/CadastroProjeto.razor
@@ -11,7 +11,7 @@
 
 <div class="container">
     <br>
-    <h1 class="display"style="text-align:center">Registrar Projeto</h1>
+    <h1 class="display"style="text-align:center">Cadastrar Projeto</h1>
     <br>
     <ErrorMessages Errors=@errors />
     <EditForm Model="projects" OnValidSubmit="@CreateProject">
