--- a/Pages/Features/Projeto/CadastroProjeto.razor
+++ b/Pages/Features/Projeto/CadastroProjeto.razor
@@ -34,7 +34,7 @@
         <div class="form-group">
             <div class="col-md-6 offset-md-3">
                 <label > Descrição </label>
-                <InputText @bind-Value="@projects.Description" name="empresa" class="form-control " placeholder="Empresa" required=""/>    
+                <InputText @bind-Value="@projects.Description" name="empresa" class="form-control " placeholder="Descrição" required=""/>    
             </div>
         </div>     
 
