--- a/Pages/Features/Projeto/FeedProjeto.razor
+++ b/Pages/Features/Projeto/FeedProjeto.razor
@@ -1,7 +1,7 @@
 @page "/projeto/feedProjeto"
 
 @using CooperativaXZ
-@inject WeatherForecastService ForecastService
+@inject ProjectService projectService
 
 <h1>Weather forecast</h1>
 
@@ -18,18 +18,14 @@ else
             <tr>
                 <th>Date</th>
                 <th>Temp. (C)</th>
-                <th>Temp. (F)</th>
-                <th>Summary</th>
             </tr>
         </thead>
         <tbody>
             @foreach (var forecast in forecasts)
             {
                 <tr>
-                    <td>@forecast.Date.ToShortDateString()</td>
-                    <td>@forecast.TemperatureC</td>
-                    <td>@forecast.TemperatureF</td>
-                    <td>@forecast.Summary</td>
+                    <td>@forecast.Name</td>
+                    <td>@forecast.Description</td>
                 </tr>
             }
         </tbody>
@@ -37,10 +33,10 @@ else
 }
 
 @code {
-    WeatherForecast[] forecasts;
+    Project[] forecasts;
 
     protected override async Task OnInitializedAsync()
     {
-        forecasts = await ForecastService.GetForecastAsync(DateTime.Now);
+        forecasts = await projectService.GetProjectAsync();
     }
 }
