--- a/Pages/FetchData.razor
+++ b/Pages/FetchData.razor
@@ -1,6 +1,6 @@
 ﻿@page "/fetchdata"
-
 @using CooperativaXZ
+@inject HttpClient Http
 @inject WeatherForecastService ForecastService
 
 <h1>Weather forecast</h1>
