--- a/Pages/Features/Projeto/FeedProjeto.razor
+++ b/Pages/Features/Projeto/FeedProjeto.razor
@@ -26,7 +26,8 @@ else
                     <td>@forecast.Name</td>
                     <td>@forecast.Description</td>
                     <td>
-                    <a href="projeto/VerDatas">Datas</a>
+                    <a href="projeto/verDatas" class="btn btn-info">Datas</a>
+                    <a href="projeto/avaliacao" class="btn btn-info">Datas</a>
                     </td>
                 </tr>
             }
