--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -14,17 +14,17 @@
           <div class="col-lg-4 col-sm-6">
             <h4><i class="oi oi-list-rich"></i> SOBRE NÓS</h4>
             <hr class="my-4">
-            <p>Este é o nosso TCC</p>
+            <p>Projeto realizado para nosso o TCC</p>
           </div>
           <div class="col-lg-4 col-sm-6">
             <h4><i class="oi oi-list-rich"></i> COOPERATIVISMO</h4>
             <hr class="my-4">
-             <p>Esté o nosso TCC</p>
+             <p>Cooperativismo é um movimento econômico e social, entre pessoas, em que a cooperação baseia-se na participação dos associados, nas atividades econômicas com vistas a atingir o bem comum.</p>
           </div>
           <div class="col-lg-4 col-sm-6">
             <h4><i class="oi oi-list-rich"></i> CONTATO</h4>
             <hr class="my-4">
-            <p>Esté o nosso TCC</p>
+            <p>João - 41 98846-0112</p>
           </div>
         </div>
 
