--- a/Pages/Features/Login/LoginUser.razor
+++ b/Pages/Features/Login/LoginUser.razor
@@ -11,20 +11,21 @@
         <div class="form-group"style="margin-top:25px;">
             <div class="col-md-6 offset-md-3">
                 <label > E-mail </label>
-                <input type="text" name="e-mail" class="form-control " placeholder="E-mail" required="Favor preencher o campo E-mail">    
+                <input type="text" name="e-mail" class="form-control " placeholder="E-mail" required="">    
             </div>
         </div>
 
         <div class="form-group">
             <div class="col-md-6 offset-md-3">
                 <label> Senha </label>  
-                <input type="password" name="senha" class="form-control" placeholder="Senha" required="Favor preencer o campo Senha">
+                <input type="password" name="senha" class="form-control" placeholder="Senha" required="">
             </div>
         </div> 
 
         <div class="form-group">
             <div class="col-md-6 offset-md-3">
-                <button type="button" class="btn btn-info">Entrar</button>
+                
+                <a href="projeto" class="btn btn-info">Entrar</a>
                
             </div>
         </div>
