--- a/Pages/Features/Projeto/EncaminharProjeto.razor
+++ b/Pages/Features/Projeto/EncaminharProjeto.razor
@@ -22,10 +22,11 @@
     </div>
     <div class="form-group">
             <div class="col-md-6 offset-md-3">
-                <button type="button" class="btn btn-info">Enviar</button>
-               
+                <a href="projeto/Final" class="btn btn-info">Entregar</a>
             </div>
         </div>
     </form> 
 </div>
 </div>
+
+
