--- a/Pages/Features/Projeto/Projeto.razor
+++ b/Pages/Features/Projeto/Projeto.razor
@@ -43,12 +43,12 @@
     </div>
     
      <div class="nav-item px-3">
-            <NavLink class="nav-link" href="projeto/datas">
+            <NavLink class="nav-link" href="projeto/verDatas">
              <span class="oi oi-clock" aria-hidden="true" style="margin-right:10px;"> </span>  Datas
             </NavLink>
     </div>
     <div class="nav-item px-3">
-            <NavLink class="nav-link" href="encaminhaProjeto">
+            <NavLink class="nav-link" href="projeto/encaminhaProjeto">
              <span class="oi oi-task" aria-hidden="true" style="margin-right:10px;"> </span>  Encaminhar Projeto
             </NavLink>
     </div>
