--- a/Pages/Features/Projeto/FeedProjeto.razor
+++ b/Pages/Features/Projeto/FeedProjeto.razor
@@ -27,7 +27,7 @@ else
                     <td>@forecast.Description</td>
                     <td>
                     <a href="projeto/verDatas" class="btn btn-info">Datas</a>
-                    <a href="projeto/avaliacao" class="btn btn-info">Datas</a>
+                    <a href="projeto/avaliacao" class="btn btn-info">Avaliação</a>
                     </td>
                 </tr>
             }
