--- a/Pages/Features/Cooperado/Cooperado.razor
+++ b/Pages/Features/Cooperado/Cooperado.razor
@@ -24,21 +24,21 @@
              <span class="oi oi-dollar" aria-hidden="true" style="margin-right:10px;"> </span>  Informações Financeiras
             </NavLink>
     </div>
-    <div class="nav-item px-3">
+    @*<div class="nav-item px-3">
             <NavLink class="nav-link" href="comentProjeto">
             <span class="oi oi-pencil" aria-hidden="true" style="margin-right:10px;"> </span>  Comentário do Projeto
             </NavLink>
-    </div>
-    <div class="nav-item px-3">
+    </div>*@
+    @*<div class="nav-item px-3">
             <NavLink class="nav-link" href="cadastroProjeto">
             <span class="oi oi-project" aria-hidden="true" style="margin-right:10px;"> </span>  Cadastro de Projeto
             </NavLink>
-    </div>
-     <div class="nav-item px-3">
+    </div>*@
+     @*<div class="nav-item px-3">
             <NavLink class="nav-link" href="analiseProjeto">
              <span class="oi oi-task" aria-hidden="true" style="margin-right:10px;"> </span>  Análise de Projeto
             </NavLink>
-    </div>
+    </div>*@
     <div class="nav-item px-3">
             <NavLink class="nav-link" href="ficha">
              <span class="oi oi-task" aria-hidden="true" style="margin-right:10px;"> </span>  Ficha de Cadastro
