--- a/Pages/Features/Projeto/Projeto.razor
+++ b/Pages/Features/Projeto/Projeto.razor
@@ -30,26 +30,26 @@
             <span class="oi oi-text" aria-hidden="true" style="margin-right:10px;"> </span>  Criar Equipe
             </NavLink>
     </div>
-    <div class="nav-item px-3">
+    @*<div class="nav-item px-3">
             <NavLink class="nav-link" href="projeto/avaliacao">
              <span class="oi oi-book" aria-hidden="true" style="margin-right:10px;"> </span>  Avaliacão de Equipe
             </NavLink>
-    </div>
+    </div>*@
    
-    <div class="nav-item px-3">
+    @*<div class="nav-item px-3">
             <NavLink class="nav-link" href="projeto/comentProjeto">
             <span class="oi oi-pencil" aria-hidden="true" style="margin-right:10px;"> </span>  Comentário do Projeto
             </NavLink>
-    </div>
+    </div>*@
     
-     <div class="nav-item px-3">
+     @*<div class="nav-item px-3">
             <NavLink class="nav-link" href="projeto/verDatas">
              <span class="oi oi-clock" aria-hidden="true" style="margin-right:10px;"> </span>  Datas
             </NavLink>
-    </div>
+    </div>*@
     <div class="nav-item px-3">
             <NavLink class="nav-link" href="projeto/encaminhaProjeto">
-             <span class="oi oi-task" aria-hidden="true" style="margin-right:10px;"> </span>  Encaminhar Projeto
+             <span class="oi oi-task" aria-hidden="true" style="margin-right:10px;"> </span>  Finalizar Projeto
             </NavLink>
     </div>
     </ul>
